# flysolosdb

./: Cargo.toml  README.md  history
mini-lsm/mini-lsm/src/iterators/: merge_iterator.rs
samples/: CREATE TABLE sqlrite_schema.sql  CREATE_TABLE.sql  INSERT.sql
server/: .hisData  Cargo.toml  history
server/data/: curr_db
server/src/: main.rs
server/src/enum/: query.rs
server/src/error/: error.rs  mod.rs
server/src/error/database/: DataError.rs  Table.rs  TableError.rs  error.rs  mod.rs
server/src/meta_command/: mod.rs
server/src/repl/: mod.rs
server/src/sql/: mod.rs
server/src/sql/db/: database.rs  mod.rs  table.rs
server/src/sql/engine/: kv.rs
server/src/sql/parser/: create.rs  insert.rs  mod.rs  query.rs  queryParser.rs
server/src/sql/regrxs/: mod.rs  types.rs  utils.rs
server/src/storage/kv/: mod.rs  mvcc.rs
server/src/storage/log/: hybrid.rs  memory.rs  mod.rs
sql/: Cargo.toml
sql/src/: main.rs
sql/src/types/: expression.rs  mod.rs
sqlService/: Cargo.toml
sqlparser/src/: parser.rs  tokenizer.rs
sqlparser/tests/: sqlparser_bigquery.rs  sqlparser_common.rs  sqlparser_postgres.rs
src/: block.rs  compact.rs  iterators.rs  key.rs  lsm_storage.rs  main.rs  memtable.rs  minilsm.rs  sstable.rs  two_merge_iterator.rs
src/sql/: mod.rs  tokenize.rs
