[package]
name = "serverCopy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arc-swap = "1"
bytes = "1"
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
parking_lot = "0.12"
ouroboros = "0.16"
moka = "0.10.0"
clap = { version = "4.4.17", features = ["derive"] }
rand = "0.8.5"
crossbeam-channel = "0.5.11"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
crc32fast = "1.3.2"
farmhash = "1"
tempfile = "3"
tracing = "0.1.40"
tracing-subscriber = "0.3"
tokio = { version = "1.38.0", features = ["full"] }
