[package]
name = "server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.2.0", features = ["cargo"] }
rustyline = { version = "11.0.0", features = ["derive"] }
sqlparser = { path="../sqlparser" }
# sqlparser = "0.28.0"
bigdecimal = { version = "0.3", features = ["serde", "string-only"] }
thiserror = "1.0.31"
serde = { version = "1.0.159", features = ["derive","rc"] }
prettytable-rs = "0.10.0"
